--- a/html/main.html
+++ b/html/main.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="ko">
     <meta charset="UTF-8">
-    <title></title>
+    <title>helloworld</title>
 </head>
 <body>
     Helloworld
